<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>no.lau.vdvil</groupId>
    <artifactId>video-renderer</artifactId>
    <version>1.16.2-SNAPSHOT</version>
    <packaging>jar</packaging>


    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <test.exlusion />
    </properties>

    <dependencies>
        <dependency>
            <groupId>xuggle</groupId>
            <artifactId>xuggle-xuggler</artifactId>
            <version>5.4</version>
            <exclusions>
                <exclusion>
                    <groupId>com.google.guava</groupId>
                    <artifactId>guava</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.8.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.35</version>
        </dependency>

        <dependency>
            <groupId>net.bramp.ffmpeg</groupId>
            <artifactId>ffmpeg</artifactId>
            <version>0.6.2</version>
        </dependency>
    </dependencies>
    <profiles>
        <profile>
            <id>ex-integration</id>
            <properties>
                <test.exlusion>IntegrationTest</test.exlusion>
            </properties>
        </profile>
    </profiles>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.0</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-scm-plugin</artifactId>
                <version>2.0.0-M3</version>
                <configuration>
                    <tag>${project.artifactId}-${project.version}</tag>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M7</version>
                <configuration>
                    <excludedGroups>${test.exlusion}</excludedGroups><!-- To be switched based on whether running on github/actions or naught -->
                </configuration>
            </plugin>
        </plugins>
    </build>
    <repositories>
        <repository>
            <id>aws-repository</id>
            <url>https://kompost.s3.amazonaws.com/maven/</url>
        </repository>
    </repositories>
    <scm>
        <connection>scm:git:ssh://github.com/StigLau/VideoRenderer.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/StigLau/VideoRenderer.git</developerConnection>
        <url>https://github.com/StigLau/VideoRenderer</url>
    </scm>
    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub StigLau Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/StigLau/VideoRenderer</url>
        </repository>
    </distributionManagement>
</project>
